[gd_scene load_steps=11 format=3 uid="uid://cg8j82i710fdr"]

[ext_resource type="Script" path="res://scripts/scene/world.gd" id="1_7tooo"]
[ext_resource type="PackedScene" uid="uid://b6g2nitlgeosj" path="res://scenes/ui/main_menu.tscn" id="2_knur3"]
[ext_resource type="PackedScene" uid="uid://d5fp1ujp6rc7" path="res://scenes/world/cafe.tscn" id="2_skrju"]
[ext_resource type="PackedScene" uid="uid://d3shrvf6fa7qv" path="res://scenes/ui/pause_menu.tscn" id="3_w5kys"]
[ext_resource type="PackedScene" uid="uid://dn3urr1xccmik" path="res://scenes/world/kitchen.tscn" id="3_wvu77"]
[ext_resource type="Script" path="res://scenes/ui/pause_menu.gd" id="4_o7cnx"]
[ext_resource type="PackedScene" uid="uid://cookffcxckdkf" path="res://scenes/world/test_scene.tscn" id="4_wy5p2"]
[ext_resource type="PackedScene" uid="uid://dta8ywnphhy4" path="res://scenes/world/background.tscn" id="5_rjga5"]
[ext_resource type="PackedScene" uid="uid://cbeth81wdaykt" path="res://scenes/ui/completed_dish_inventory.tscn" id="7_jd73d"]
[ext_resource type="PackedScene" uid="uid://bncvkt22xkeor" path="res://scenes/cutscene.tscn" id="10_pdr1q"]

[node name="World" type="Node2D" node_paths=PackedStringArray("main_menu")]
script = ExtResource("1_7tooo")
main_menu = NodePath("MainMenu")

[node name="MainMenu" parent="." instance=ExtResource("2_knur3")]
offset_left = 2128.99
offset_top = 1228.22
offset_right = 2168.99
offset_bottom = 1268.22

[node name="PauseMenu" parent="." instance=ExtResource("3_w5kys")]
process_mode = 2
offset_left = 648.0
offset_top = -536.0
offset_right = 2568.0
offset_bottom = 544.0
script = ExtResource("4_o7cnx")

[node name="PauseCamera" type="Camera2D" parent="PauseMenu"]
anchor_mode = 0

[node name="Cafe" parent="." instance=ExtResource("2_skrju")]
metadata/_edit_lock_ = true

[node name="Kitchen" parent="." instance=ExtResource("3_wvu77")]
offset_left = -2077.0
offset_top = -1904.0
offset_right = -157.0
offset_bottom = -824.0

[node name="TestScene" parent="." instance=ExtResource("4_wy5p2")]
position = Vector2(2359, -796)

[node name="DayNightCycle" parent="." instance=ExtResource("5_rjga5")]
position = Vector2(72, 56)

[node name="PlayerCamera" type="Camera2D" parent="."]
position = Vector2(-202.932, -98.0373)
anchor_mode = 0
zoom = Vector2(3.5, 3.5)

[node name="CompletedDishInventory" parent="." instance=ExtResource("7_jd73d")]
unique_name_in_owner = true
visible = false
z_index = 4000
offset_left = -200.0
offset_top = -96.0
offset_right = -200.0
offset_bottom = -96.0

[node name="Cutscene" parent="." instance=ExtResource("10_pdr1q")]
visible = false
position = Vector2(-2374, 314)

[node name="attach_json_loader_to_node_to_build_card_resources_from_json_data" type="Node" parent="."]
